--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 20px;
+        }
+        .form-container {
+            background-color: #2d3748; /* Tailwind's gray-700 */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="bg-gray-800 rounded-lg shadow-lg p-8 max-w-sm w-full">
+        <div class="form-container rounded-lg shadow-lg p-6 sm:p-8 max-w-xs sm:max-w-md w-full">
             <h2 class="text-2xl font-bold mb-4 text-white text-center">Sign Up / Login</h2>
             <form id="auth-form" class="space-y-4">
                 <div>
