--- a/home.html
+++ b/home.html
@@ -16,12 +16,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding-top: 20px;
-            padding-left: 10px;
-            padding-right: 10px;
+            padding: 20px;
         }
         .navbar {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             width: 100%;
@@ -29,6 +28,7 @@
             padding: 10px 20px;
             background-color: #2d3748; /* Tailwind's gray-700 */
             border-radius: 8px;
+            margin-bottom: 20px;
         }
         .nav-item {
             margin-left: 10px;
@@ -39,7 +39,6 @@
             margin-left: 20px; /* Ensure spacing between nav items */
         }
         .content {
-            margin-top: 20px;
             color: white;
             max-width: 800px;
             width: 100%;
@@ -55,13 +54,21 @@
             width: 100%;
             max-width: 600px;
         }
+        .logo {
+            height: 40px; /* Adjust size as needed */
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="navbar">
+            <!-- Logo visible on small screens only -->
+            <img src="logo.png" alt="Logo" class="logo block sm:hidden">
+
             <h1 class="text-2xl font-bold text-white">Dashboard</h1>
-            <div class="flex">
+            
+            <div class="flex flex-wrap sm:flex-nowrap items-center">
                 <span class="nav-item" id="profile">User Profile</span>
                 <span class="nav-item" id="messages">Messages</span>
                 <span class="nav-item" id="status">Status</span>
@@ -83,25 +90,15 @@
     </div>
 
     <script>
-        // Check if the user is authenticated
-        const authenticated = localStorage.getItem('authenticated');
+        document.getElementById('settings').addEventListener('click', () => {
+            const settingsSection = document.getElementById('settings-section');
+            settingsSection.style.display = settingsSection.style.display === 'block' ? 'none' : 'block';
+        });
 
-        // If not authenticated, redirect to login page
-        if (authenticated !== 'true') {
-            window.location.href = 'login.html';
-        }
-
-        // Logout functionality
         document.getElementById('logout-btn').addEventListener('click', () => {
             localStorage.removeItem('user');
             localStorage.removeItem('authenticated');
             window.location.href = 'login.html';
-        });
-
-        // Toggle settings section visibility
-        document.getElementById('settings').addEventListener('click', () => {
-            const settingsSection = document.getElementById('settings-section');
-            settingsSection.style.display = settingsSection.style.display === 'none' || !settingsSection.style.display ? 'block' : 'none';
         });
     </script>
 </body>
