--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up / Login</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
@@ -18,44 +18,59 @@
             padding: 20px;
         }
         .form-container {
+            max-width: 400px;
+            width: 100%;
             background-color: #2d3748; /* Tailwind's gray-700 */
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="form-container rounded-lg shadow-lg p-6 sm:p-8 max-w-xs sm:max-w-md w-full">
-            <h2 class="text-2xl font-bold mb-4 text-white text-center">Login</h2>
+        <div class="form-container">
+            <h2 class="text-2xl font-bold mb-6 text-white text-center">Sign Up / Login</h2>
             <form id="auth-form" class="space-y-4">
                 <div>
                     <label for="username" class="block text-white">Username:</label>
-                    <input type="text" id="username" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter your username" required>
+                    <input type="text" id="username" class="w-full p-3 border border-gray-600 rounded bg-gray-800 text-white placeholder-gray-400" placeholder="Enter your username" required>
                 </div>
                 <div>
                     <label for="password" class="block text-white">Password:</label>
-                    <input type="password" id="password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter your password" required>
+                    <input type="password" id="password" class="w-full p-3 border border-gray-600 rounded bg-gray-800 text-white placeholder-gray-400" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 w-full">Log In</button>
-                <p class="text-white text-center mt-4">Don't have an account? <a href="signup.html" class="text-blue-400 hover:underline">Sign Up</a></p>
+                <button type="submit" class="bg-blue-500 text-white p-3 rounded hover:bg-blue-600 w-full">Log In</button>
+                <p class="text-white text-center mt-4">Don't have an account? <a href="#" id="switch-to-signup" class="text-blue-400 hover:underline">Sign Up</a></p>
             </form>
         </div>
     </div>
 
     <script>
-        document.getElementById('auth-form').addEventListener('submit', (event) => {
+        const form = document.getElementById('auth-form');
+        const switchToSignup = document.getElementById('switch-to-signup');
+
+        form.addEventListener('submit', (event) => {
             event.preventDefault(); // Prevent form submission
             
+            // Dummy authentication check
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             if (username && password) {
+                // Store user info in local storage
                 localStorage.setItem('user', JSON.stringify({ username, password }));
-                localStorage.setItem('authenticated', 'true');
+                localStorage.setItem('authenticated', 'true'); // Mark user as authenticated
 
+                // Redirect to home page
                 window.location.href = 'home.html';
             } else {
                 alert('Please fill out all fields.');
             }
+        });
+
+        switchToSignup.addEventListener('click', () => {
+            alert('Sign Up functionality is not implemented in this example.');
         });
     </script>
 </body>
