--- a/home.html
+++ b/home.html
@@ -55,6 +55,9 @@
             width: 100%;
             max-width: 600px;
         }
+        .settings-section h2 {
+            font-size: 1.5rem;
+        }
         .logo {
             height: 40px; /* Adjust size as needed */
         }
@@ -62,17 +65,23 @@
             display: none;
             cursor: pointer;
             color: white;
+            font-size: 1.5rem;
+        }
+        .navbar-menu {
+            display: flex;
+            align-items: center;
         }
         @media (max-width: 640px) {
             .navbar-toggle {
                 display: block;
             }
-            .navbar-content {
+            .navbar-menu {
                 display: none;
+                flex-direction: column;
                 width: 100%;
             }
-            .navbar-content.show {
-                display: block;
+            .navbar-menu.show {
+                display: flex;
             }
         }
     </style>
@@ -81,11 +90,11 @@
     <div class="container">
         <div class="navbar">
             <!-- Logo visible on small screens only -->
-            <img src="<box-icon name='list-check'></box-icon>" alt="Logo" class="logo block sm:hidden">
+            <img src="https://example.com/logo.png" alt="Logo" class="logo block sm:hidden">
 
             <span class="navbar-toggle" id="navbar-toggle">&#9776;</span>
 
-            <div class="navbar-content flex flex-wrap sm:flex-nowrap items-center">
+            <div class="navbar-menu">
                 <h1 class="text-2xl font-bold text-white sm:flex-1">Dashboard</h1>
                 <div class="flex flex-wrap sm:flex-nowrap">
                     <span class="nav-item" id="profile">User Profile</span>
@@ -103,38 +112,86 @@
         </div>
 
         <div class="settings-section" id="settings-section">
-            <h2 class="text-xl font-bold mb-4">Settings</h2>
-            <p>Here you can adjust your preferences and account settings.</p>
-            <!-- Add more settings options as needed -->
+            <h2 class="text-xl font-bold mb-4">Account Settings</h2>
+            <!-- Profile Settings -->
+            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
+                <h3 class="text-lg font-bold text-white mb-4">Profile Settings</h3>
+                <form id="profile-settings-form">
+                    <div>
+                        <label for="profile-photo" class="block text-white">Profile Photo:</label>
+                        <input type="file" id="profile-photo" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white">
+                    </div>
+                    <div class="mt-4">
+                        <label for="profile-name" class="block text-white">Display Name:</label>
+                        <input type="text" id="profile-name" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter new display name">
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Save Changes</button>
+                </form>
+            </div>
+
+            <!-- Change Password -->
+            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
+                <h3 class="text-lg font-bold text-white mb-4">Change Password</h3>
+                <form id="change-password-form">
+                    <div>
+                        <label for="current-password" class="block text-white">Current Password:</label>
+                        <input type="password" id="current-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter current password">
+                    </div>
+                    <div class="mt-4">
+                        <label for="new-password" class="block text-white">New Password:</label>
+                        <input type="password" id="new-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter new password">
+                    </div>
+                    <div class="mt-4">
+                        <label for="confirm-password" class="block text-white">Confirm New Password:</label>
+                        <input type="password" id="confirm-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Confirm new password">
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Change Password</button>
+                </form>
+            </div>
+
+            <!-- Edit Name -->
+            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
+                <h3 class="text-lg font-bold text-white mb-4">Edit Name</h3>
+                <form id="edit-name-form">
+                    <div>
+                        <label for="edit-name" class="block text-white">New Name:</label>
+                        <input type="text" id="edit-name" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter your new name">
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Update Name</button>
+                </form>
+            </div>
         </div>
     </div>
 
     <script>
-        // Check if the user is authenticated
-        function checkAuthentication() {
-            const authenticated = localStorage.getItem('authenticated');
-            if (authenticated !== 'true') {
-                window.location.href = 'login.html';
+        document.addEventListener('DOMContentLoaded', () => {
+            // Check if the user is authenticated
+            function checkAuthentication() {
+                const authenticated = localStorage.getItem('authenticated');
+                if (authenticated !== 'true') {
+                    window.location.href = 'login.html';
+                }
             }
-        }
 
-        checkAuthentication();
+            checkAuthentication();
 
-        document.getElementById('settings').addEventListener('click', () => {
-            const settingsSection = document.getElementById('settings-section');
-            settingsSection.style.display = settingsSection.style.display === 'block' ? 'none' : 'block';
-        });
+            // Handle settings click
+            document.getElementById('settings').addEventListener('click', () => {
+                const settingsSection = document.getElementById('settings-section');
+                settingsSection.style.display = settingsSection.style.display === 'block' ? 'none' : 'block';
+            });
 
-        document.getElementById('logout-btn').addEventListener('click', () => {
-            localStorage.removeItem('user');
-            localStorage.removeItem('authenticated');
-            window.location.href = 'login.html';
-        });
+            document.getElementById('logout-btn').addEventListener('click', () => {
+                localStorage.removeItem('user');
+                localStorage.removeItem('authenticated');
+                window.location.href = 'login.html';
+            });
 
-        // Toggle navbar visibility on small screens
-        document.getElementById('navbar-toggle').addEventListener('click', () => {
-            const navbarContent = document.querySelector('.navbar-content');
-            navbarContent.classList.toggle('show');
+            // Toggle navbar visibility on small screens
+            document.getElementById('navbar-toggle').addEventListener('click', () => {
+                const navbarMenu = document.querySelector('.navbar-menu');
+                navbarMenu.classList.toggle('show');
+            });
         });
     </script>
 </body>
