--- a/home.html
+++ b/home.html
@@ -55,9 +55,6 @@
             width: 100%;
             max-width: 600px;
         }
-        .settings-section h2 {
-            font-size: 1.5rem;
-        }
         .logo {
             height: 40px; /* Adjust size as needed */
         }
@@ -112,54 +109,9 @@
         </div>
 
         <div class="settings-section" id="settings-section">
-            <h2 class="text-xl font-bold mb-4">Account Settings</h2>
-            <!-- Profile Settings -->
-            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
-                <h3 class="text-lg font-bold text-white mb-4">Profile Settings</h3>
-                <form id="profile-settings-form">
-                    <div>
-                        <label for="profile-photo" class="block text-white">Profile Photo:</label>
-                        <input type="file" id="profile-photo" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white">
-                    </div>
-                    <div class="mt-4">
-                        <label for="profile-name" class="block text-white">Display Name:</label>
-                        <input type="text" id="profile-name" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter new display name">
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Save Changes</button>
-                </form>
-            </div>
-
-            <!-- Change Password -->
-            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
-                <h3 class="text-lg font-bold text-white mb-4">Change Password</h3>
-                <form id="change-password-form">
-                    <div>
-                        <label for="current-password" class="block text-white">Current Password:</label>
-                        <input type="password" id="current-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter current password">
-                    </div>
-                    <div class="mt-4">
-                        <label for="new-password" class="block text-white">New Password:</label>
-                        <input type="password" id="new-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter new password">
-                    </div>
-                    <div class="mt-4">
-                        <label for="confirm-password" class="block text-white">Confirm New Password:</label>
-                        <input type="password" id="confirm-password" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Confirm new password">
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Change Password</button>
-                </form>
-            </div>
-
-            <!-- Edit Name -->
-            <div class="bg-gray-800 rounded-lg shadow-lg p-8 mb-4">
-                <h3 class="text-lg font-bold text-white mb-4">Edit Name</h3>
-                <form id="edit-name-form">
-                    <div>
-                        <label for="edit-name" class="block text-white">New Name:</label>
-                        <input type="text" id="edit-name" class="w-full p-2 border border-gray-600 rounded bg-gray-700 text-white" placeholder="Enter your new name">
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 mt-4 w-full">Update Name</button>
-                </form>
-            </div>
+            <h2 class="text-xl font-bold mb-4">Settings</h2>
+            <p>Here you can adjust your preferences and account settings.</p>
+            <!-- Add more settings options as needed -->
         </div>
     </div>
 
@@ -175,7 +127,11 @@
 
             checkAuthentication();
 
-            // Handle settings click
+            // Set profile data (example)
+            const username = localStorage.getItem('username') || 'Username';
+            const profilePhoto = localStorage.getItem('profilePhoto') || 'profile-photo.jpg';
+
+            // Handle form submission
             document.getElementById('settings').addEventListener('click', () => {
                 const settingsSection = document.getElementById('settings-section');
                 settingsSection.style.display = settingsSection.style.display === 'block' ? 'none' : 'block';
