--- a/home.html
+++ b/home.html
@@ -16,11 +16,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding: 20px;
+            padding-top: 20px;
         }
         .navbar {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             width: 100%;
@@ -28,23 +27,15 @@
             padding: 10px 20px;
             background-color: #2d3748; /* Tailwind's gray-700 */
             border-radius: 8px;
-            margin-bottom: 20px;
-            position: relative;
         }
         .nav-item {
-            margin-left: 10px;
+            margin-left: 20px;
             color: white;
             cursor: pointer;
         }
-        .nav-item + .nav-item {
-            margin-left: 20px; /* Ensure spacing between nav items */
-        }
         .content {
+            margin-top: 20px;
             color: white;
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            text-align: center;
         }
         .settings-section {
             display: none;
@@ -55,51 +46,18 @@
             width: 100%;
             max-width: 600px;
         }
-        .logo {
-            height: 40px; /* Adjust size as needed */
-        }
-        .navbar-toggle {
-            display: none;
-            cursor: pointer;
-            color: white;
-            font-size: 1.5rem;
-        }
-        .navbar-menu {
-            display: flex;
-            align-items: center;
-        }
-        @media (max-width: 640px) {
-            .navbar-toggle {
-                display: block;
-            }
-            .navbar-menu {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-            }
-            .navbar-menu.show {
-                display: flex;
-            }
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="navbar">
-            <!-- Logo visible on small screens only -->
-            <img src="https://example.com/logo.png" alt="Logo" class="logo block sm:hidden">
-
-            <span class="navbar-toggle" id="navbar-toggle">&#9776;</span>
-
-            <div class="navbar-menu">
-                <h1 class="text-2xl font-bold text-white sm:flex-1">Dashboard</h1>
-                <div class="flex flex-wrap sm:flex-nowrap">
-                    <span class="nav-item" id="profile">User Profile</span>
-                    <span class="nav-item" id="messages">Messages</span>
-                    <span class="nav-item" id="status">Status</span>
-                    <span class="nav-item" id="settings">Settings</span>
-                    <span class="nav-item" id="logout-btn">Log Out</span>
-                </div>
+            <h1 class="text-2xl font-bold text-white">Dashboard</h1>
+            <div>
+                <span class="nav-item" id="profile">User Profile</span>
+                <span class="nav-item" id="messages">Messages</span>
+                <span class="nav-item" id="status">Status</span>
+                <span class="nav-item" id="settings">Settings</span>
+                <span class="nav-item" id="logout-btn">Log Out</span>
             </div>
         </div>
 
@@ -116,38 +74,26 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Check if the user is authenticated
-            function checkAuthentication() {
-                const authenticated = localStorage.getItem('authenticated');
-                if (authenticated !== 'true') {
-                    window.location.href = 'login.html';
-                }
+        // Check authentication status
+        if (localStorage.getItem('authenticated') !== 'true') {
+            window.location.href = 'login.html';
+        }
+
+        // Logout functionality
+        document.getElementById('logout-btn').addEventListener('click', () => {
+            localStorage.removeItem('user');
+            localStorage.removeItem('authenticated');
+            window.location.href = 'login.html';
+        });
+
+        // Toggle settings section
+        document.getElementById('settings').addEventListener('click', () => {
+            const settingsSection = document.getElementById('settings-section');
+            if (settingsSection.style.display === 'none' || !settingsSection.style.display) {
+                settingsSection.style.display = 'block';
+            } else {
+                settingsSection.style.display = 'none';
             }
-
-            checkAuthentication();
-
-            // Set profile data (example)
-            const username = localStorage.getItem('username') || 'Username';
-            const profilePhoto = localStorage.getItem('profilePhoto') || 'profile-photo.jpg';
-
-            // Handle form submission
-            document.getElementById('settings').addEventListener('click', () => {
-                const settingsSection = document.getElementById('settings-section');
-                settingsSection.style.display = settingsSection.style.display === 'block' ? 'none' : 'block';
-            });
-
-            document.getElementById('logout-btn').addEventListener('click', () => {
-                localStorage.removeItem('user');
-                localStorage.removeItem('authenticated');
-                window.location.href = 'login.html';
-            });
-
-            // Toggle navbar visibility on small screens
-            document.getElementById('navbar-toggle').addEventListener('click', () => {
-                const navbarMenu = document.querySelector('.navbar-menu');
-                navbarMenu.classList.toggle('show');
-            });
         });
     </script>
 </body>
