--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background-color: #f0f2f5;
@@ -196,6 +197,28 @@
         .settings-dropdown a:hover {
             background-color: #f0f2f5;
         }
+        .add-status-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #1877f2;
+            color: white;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            z-index: 100;
+        }
+        .add-status-btn:hover {
+            background-color: #165eab;
+        }
+        .add-status-btn i {
+            font-size: 1.5rem;
+        }
         @media (max-width: 640px) {
             .navbar-toggle {
                 display: block;
@@ -234,22 +257,22 @@
                     <span class="nav-item" id="messages">Messages</span>
                     <span class="nav-item" id="status">Status</span>
                     <span class="nav-item" id="settings">Settings</span>
-                    <span class="nav-item" id="logout-btn">Log Out</span>
-                </div>
-                <div class="settings-dropdown" id="settings-dropdown">
-                    <a href="#" id="profile-settings">Profile Settings</a>
-                    <a href="#" id="change-password">Change Password</a>
-                    <a href="#" id="edit-name">Edit Name</a>
+                    <button id="logout-btn" class="nav-item">Logout</button>
                 </div>
             </div>
         </div>
 
-        <!-- Status Updates -->
+        <!-- Status Scroll Container -->
         <div class="status-scroll-container" id="status-scroll-container">
-            <!-- Status updates will be dynamically added here -->
+            <!-- Status items will be dynamically added here -->
         </div>
 
-        <!-- Profile Header -->
+        <!-- Add Status Button -->
+        <div class="add-status-btn" id="add-status-btn">
+            <i class="fas fa-plus"></i>
+        </div>
+
+        <!-- Profile Section -->
         <div class="profile-header" id="profile-section">
             <div class="cover-photo"></div>
             <div class="profile-info">
@@ -280,16 +303,6 @@
                 <label for="about">About:</label>
                 <textarea id="about" rows="4" placeholder="About yourself"></textarea>
                 <button type="submit">Save Changes</button>
-            </form>
-        </div>
-
-        <!-- Status Update Form -->
-        <div class="status-form" id="status-section">
-            <h2 class="text-lg font-bold mb-4">Update Your Status</h2>
-            <form id="status-form">
-                <textarea id="status-text" rows="4" placeholder="What's your status?" class="resize-none"></textarea>
-                <input type="file" id="status-image">
-                <button type="submit">Update Status</button>
             </form>
         </div>
 
@@ -423,7 +436,7 @@
         var sections = {
             'profile': document.getElementById('profile-section'),
             'messages': document.getElementById('messages-section'),
-            'status': document.getElementById('status-section'),
+            'status': document.getElementById('status-scroll-container'),
             'settings': document.getElementById('settings-section'),
             'post': document.getElementById('post-section'),
             'profile-edit': document.getElementById('profile-edit-section')
@@ -446,6 +459,10 @@
         });
         document.getElementById('settings-profile').addEventListener('click', function() {
             toggleSection('profile-edit');
+        });
+
+        document.getElementById('add-status-btn').addEventListener('click', function() {
+            toggleSection('status');
         });
 
         function toggleSection(section) {
